# cross-domain-experiment

./: .gitignore  LICENSE  README.md  configs.yaml  kaggle_sanity_check.ipynb  mkdocs.yml  neural_gap_manifest.csv  pyproject.toml  run_experiments.ipynb  run_one_config.py
.github/workflows/: docs.yml  tests.yml
configs/: base.yaml  compatibility.yaml  deepbeat.yaml  experiment_example.yaml  mitbih.yaml  smoke_minimal.yaml  stead.yaml
configs/statistical/: README.md  compatibility.yaml  deepbeat.yaml  experiment_example.yaml  mitbih.yaml  smoke_minimal.yaml  stead.yaml
docs/: adaptation.md  analysis.md  bearing_analysis.md  contributing.md  datasets.md  index.md  installation.md  metrics.md  models.md  quickstart.md  representations.md  runner.md
docs/api/: adaptation.md  models.md  (+4 more)
examples/: example_experiment.py  quickstart.ipynb
experimental/: README.md  carla_ssl.py  cwru_loader.py
nstad_bench/: __init__.py
scripts/: aggregate.py  dry_run.py  extract_deepbeat_subset.py  inspect_stage1.py  profile_training.py  run_all.py  run_all_stat.py  smoke_mitbih_ds1_ds2.py  smoke_runner_e2e.py  stead_inspect_networks.py
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: test_adaptation.py  test_analysis.py  test_chbmit_loader.py  test_cwru_loader_promoted.py  test_data.py  test_data_root_env.py  test_deepbeat_loader.py  test_download.py  test_metrics.py  test_mimii_loader.py  test_mitbih_loader.py  test_models.py  test_representations.py  test_run_one_config_smoke.py  test_runner.py  test_sleep_edf_loader.py  test_statistical.py  test_stead_loader.py
(+86 files in other folders)
