[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nstad_bench"
version = "0.1.0"
description = "Non-Stationary Transfer Adaptation Domain Benchmark"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "parshintseva" }]

dependencies = [
    "torch==2.3.1",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "scikit-learn==1.5.1",
    "pyyaml==6.0.2",
    "pandas==2.2.3",
    "pyarrow==16.1.0",
    "PyWavelets==1.6.0",
    "wfdb==4.3.1",
    "requests==2.32.3",
    "tqdm==4.66.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
nstad-download = "nstad_bench.data.download:main"

[tool.hatch.build.targets.wheel]
packages = ["nstad_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
